[gd_scene load_steps=3 format=2]

[ext_resource path="res://c1mConsole/Scripts/c1m_console.gd" type="Script" id=1]
[ext_resource path="res://c1mConsole/Theme/c1m_console_theme.theme" type="Theme" id=2]

[node name="c1mConsole" type="Control"]
anchor_right = 1.0
margin_bottom = 240.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
max_length = 64
placeholder_text = "Console Input"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearOutput" type="Button" parent="Input"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -15.0
margin_right = -4.0
margin_bottom = 15.0
focus_mode = 1
enabled_focus_mode = 1
text = "Clear Output"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 240.0
focus_mode = 2
bbcode_enabled = true
bbcode_text = "Console Output"
text = "Console Output"
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Input" to="." method="_on_Input_text_changed"]
[connection signal="text_entered" from="Input" to="." method="_on_Input_text_entered"]
[connection signal="pressed" from="Input/ClearOutput" to="." method="_on_ClearOutput_pressed"]
